# codex-mcp-rs

./: .cargo-release.toml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE-COMMERCIAL  Makefile  README-zh_CN.md  README.md  server.json
.github/workflows/: ci.yml  release.yml
npm/: README.md  package.json  run.js
npm/codex-mcp-rs/: README.md  package.json  run.js
scripts/: build-macOS-universal-binary.sh  check-version.sh  install.sh
src/: codex.rs  lib.rs  main.rs  server.rs
tests/: error_flow_tests.rs
