[package]
name = "codex-mcp-rs"
version = "0.1.3"
edition = "2021"
rust-version = "1.77.2"
authors = ["missdeer"]
description = "MCP server wrapping the Codex CLI in Rust"
license = "MIT"
repository = "https://github.com/missdeer/codex-mcp-rs"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.18", features = ["serde", "v4"] }
serde_with = { version = "3.16.1", features = ["schemars_0_8"] }
serde_bytes = "0.11.19"
clap = { version = "4.5.53", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }

[dev-dependencies]
tempfile = "3.23.0"

